@startuml

package "Backend Model" #DDDDDD {
class SchoolClass {
    TeachingHour[] teachingHour
    TeachingSubject[] teachingSubject
}

class TeachingHour {
    SchoolClass schoolClass
    TeachingSubject teachingSubject
}


class TeachingSubject {
    SchoolClass schoolClass
    TeachingHour[] teachingHour
}

class Task

SchoolClass "1" --> "50" TeachingHour
SchoolClass "1" --> "0..*" TeachingSubject
TeachingHour "0..*" --> "1" TeachingSubject
Task "0..*" --> "1" TeachingHour
}

package "Frontend Model" #DDDDDD {
class SubjectHourData {
    Number: day <Weekday>
    TeachingHour: teachingHour
    TeachingSubject: teachingSubject
}
class SubjectHour {
    Number: index <1..9, teaching hour on day>
}

SubjectHourData "1" *-- "1" SubjectHour
SubjectHourData "1" *-- "1" TeachingHour

SubjectHourData "1" --> "0..1"  TeachingSubject
}

package "Calendar Model" #DDDDDD {
class CalendarEvent<? extends EventMeta>
class EventMeta {
    subjectHourData: SubjectHourData
}
class SubjectEventMeta {
    events: CalendarEvent<TaskEventMeta>[]
}
class TaskEventMeta {
    task: Task
}

CalendarEvent *- EventMeta
SubjectEvent *- SubjectEventMeta


class SubjectEvent {

}


EventMeta <|--  SubjectEventMeta
EventMeta <|--  TaskEventMeta
CalendarEvent <|-- SubjectEvent

SubjectEventMeta --> CalendarEvent
}

TaskEventMeta --> Task

EventMeta --> SubjectHourData
@enduml
